# unichain

./: .env  .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/commands/: delete.rs  list.rs  mod.rs  store.rs  update.rs  view.rs
src/model/: mod.rs
src/utils/: mod.rs
