[package]
name = "unichain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
idgenerator = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3.3"
rand = "0.8"
anyhow = "1.0.93"
log = "0.4.22"
env_logger = "0.11.5"
tempfile = "3.3"
